# gp-project

./: CMakeLists.txt  Camera.cpp  Camera.hpp  SkyBox.cpp  main.cpp  readme.md
shaders/: test.vert
